chore: arquivos de configuração PostCSS e Tailwind

--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ]
           },
@@ -88,5 +89,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "21e1ea19-39f3-408e-909f-11ddb4aba51c"
   }
 }
